diesel_compile_tests/tests/fail/derive/bad_variadic.stderr
error: expected integer literal
 --> tests/fail/derive/bad_variadic.rs:7:16
  |
7 |     #[variadic(non_a_literal_number)]
  |                ^^^^^^^^^^^^^^^^^^^^

error: invalid variadic argument count: not enough function arguments
  --> tests/fail/derive/bad_variadic.rs:10:16
   |
10 |     #[variadic(3)]
   |                ^

error: variadic argument should have path type
  --> tests/fail/derive/bad_variadic.rs:14:10
   |
14 |     fn h(a: impl SqlType);
   |          ^
